# photojoo

./: .gitignore  Caddyfile  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx  context.tsx  main.tsx
client/src/components/: AppNavbar.tsx  Filters.tsx  ProductItem.tsx  ProductList.tsx  Range.tsx
client/src/services/: http.ts
server/src/: main.py  query.py
server/src/vdb/: client.py  seeder.py
src/: main.py  outpu.py  query.py
src/clip/: __init__.py  clip.py  seeder.py
src/meili/: __init__.py  meili.py  model.py  seeder.py
src/utils/: __init__.py  data_loader.py
src/vdb/: __init__.py  client.py  models.py  seeder.py
